【AI Class】添加AI Class相关文件 数据集、数据集解析、网络、推理、训练、模型转换

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 project.xcworkspace
 xcshareddata
 xcuserdata
+__pycache__
+
+20年5月17日 AI_Class/1_MNIST
+20年5月17日 AI_Class/2_Dataset/someTrainImages
+20年5月17日 AI_Class/2_Dataset/someTestImages
+20年5月17日 AI_Class/5_Training/Milestone
+20年5月17日 AI_Class/6_ModelTrans/model.onnx
+
